<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.pl.agh.bator.ishihara_test.IshiharaViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LeaderboardFragment">
        <TextView
            android:id="@+id/score_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="15dp"
            android:text="@string/leaderboard_title"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"/>
        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/score_divider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/score_title"
            android:layout_marginTop="10dp"
            app:dividerInsetStart="40dp"
            app:dividerInsetEnd="40dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"
            app:layoutManager="LinearLayoutManager"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/score_divider"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/result_caption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recycler_view"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="20dp"
            style="@style/TextAppearance.Material3.LabelLarge"
            android:text="@string/result_caption"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xyz"
            style="@style/TextAppearance.Material3.BodyLarge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_caption"
            android:layout_marginStart="40dp"/>
        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.Material3.BodyLarge"
            android:text="100.0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/result_caption"
            android:layout_marginEnd="40dp"/>

        <Button
            android:id="@+id/return_to_menu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="100dp"
            android:layout_marginEnd="100dp"
            android:layout_marginBottom="20dp"
            android:text="@string/return_button"
            style="@style/Widget.Material3.Button.OutlinedButton"
            />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>